--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -53,6 +53,7 @@
   text-shadow: -2px 1px 22px rgba(0, 0, 0, 0.32);
 }
 .contenedorTareas .container {
+  transition: 0.3s all ease-in;
   max-width: 40em;
   height: auto;
   background-color: #a0ffa0;
@@ -109,14 +110,22 @@
 }
 
 @media screen and (max-width: 519px) {
-  .contenedorTareas .taskItem {
+  .container {
+    min-width: 90%;
+  }
+  .container .taskList {
+    width: 80%;
+  }
+  .container .taskList .taskItem {
+    gap: 30px;
+    width: 100%;
     flex-direction: column;
   }
-  .contenedorTareas .taskItem .divisor {
+  .container .taskList .taskItem .divisor {
     height: 3px;
     width: 80%;
   }
-  .contenedorTareas .taskItem .botones {
+  .container .taskList .taskItem .botones {
     flex-direction: row;
   }
 }
