--- a/src/CSS/index.scss
+++ b/src/CSS/index.scss
@@ -58,6 +58,7 @@
      }
 
           .container {
+               transition: .3s all ease-in;
                max-width: 40em;
                height: auto;
                background-color: #a0ffa0;
@@ -124,18 +125,25 @@
      }
 
 
-@media screen and (max-width:519px) {
-     .contenedorTareas {
-          .taskItem {
-               flex-direction: column;
-     
-               .divisor {
-                    height: 3px;
-                    width: 80%;
-               }
+@media screen and (max-width: 519px) {
+     .container {
+          min-width: 90%;
 
-               .botones {
-                    flex-direction: row;
+          .taskList {
+               width: 80%;
+               .taskItem {
+                    gap: 30px;
+                    width: 100%;
+                    flex-direction: column;
+          
+                    .divisor {
+                         height: 3px;
+                         width: 80%;
+                    }
+     
+                    .botones {
+                         flex-direction: row;
+                    }
                }
           }
      }
