--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -69,13 +69,14 @@
   transition: 0.3s all ease-in;
 }
 .contenedorTareas .taskList .taskItem {
+  justify-content: space-evenly;
   box-shadow: 0px 10px 100px -3px rgba(0, 0, 0, 0.1);
   align-items: center;
   color: var(--colorTexto);
   padding: 1em;
   margin: 2em;
   border-radius: 20px;
-  max-width: 80%;
+  min-width: 80%;
   height: auto;
   gap: 20px;
 }
@@ -221,6 +222,6 @@
   transform: scale(1.1);
 }
 
-.activo {
-  background-color: var(--colorTexto);
+.menorOpacidad {
+  opacity: 0.5;
 }/*# sourceMappingURL=index.css.map */
