--- a/src/CSS/index.scss
+++ b/src/CSS/index.scss
@@ -76,13 +76,14 @@
                transition: .3s all ease-in;
                
                .taskItem {
+                    justify-content: space-evenly;
                     box-shadow: 0px 10px 100px -3px rgba(0,0,0,0.1);
                     align-items: center;
                     color: var(--colorTexto);
                     padding: 1em;
                     margin: 2em;
                     border-radius: 20px;
-                    max-width: 80%;
+                    min-width: 80%;
                     height: auto;
                     gap: 20px;
 
@@ -261,7 +262,7 @@
      }
 }
 
-.activo {
-     background-color: var(--colorTexto);
+.menorOpacidad {
+     opacity: .5;
 }
 
